fixed x-overflow caused by digits values input field

--- a/src/components/Settings/section.module.css
+++ b/src/components/Settings/section.module.css
@@ -13,7 +13,7 @@
 .section > div {
   display: grid;
   grid-auto-flow: row;
-  grid-template-columns: max-content min-content;
+  grid-template-columns: max-content minmax(min-content, 1fr);
   grid-auto-rows: min-content;
   place-items: center start;
   row-gap: 0.75em;
@@ -59,6 +59,7 @@
   justify-self: stretch;
   padding: 0.35em 0 0.35em 0.75em;
   overflow: hidden;
+  width: 100%;
 }
 
 /* select */
